[gd_scene load_steps=5 format=3 uid="uid://dylrp0j2fgsfj"]

[ext_resource type="Script" uid="uid://cu3md3dbxh41b" path="res://main.gd" id="1_0xm2m"]
[ext_resource type="Texture2D" uid="uid://c0tx0clq3nmdj" path="res://Background.jpg" id="2_1bvp3"]
[ext_resource type="PackedScene" uid="uid://cci8yvedkassj" path="res://Sana.tscn" id="2_h2yge"]
[ext_resource type="PackedScene" uid="uid://4tpxp688i6or" path="res://gramophone.tscn" id="5_lquwl"]

[node name="Main" type="Node2D"]
script = ExtResource("1_0xm2m")

[node name="Background" type="Sprite2D" parent="."]
scale = Vector2(1.15, 1.15)
texture = ExtResource("2_1bvp3")
centered = false

[node name="Sana" parent="." instance=ExtResource("2_h2yge")]
position = Vector2(175, 667)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="CameraToggleButton" type="Button" parent="CanvasLayer"]
offset_left = 5.0
offset_top = 681.0
offset_right = 128.0
offset_bottom = 712.0
text = "Toggle Camera"
metadata/_edit_use_anchors_ = true

[node name="ClockButton" type="Button" parent="CanvasLayer"]
offset_left = 136.0
offset_top = 681.0
offset_right = 259.0
offset_bottom = 712.0
text = "Toggle Clock"
metadata/_edit_use_anchors_ = true

[node name="CameraPivot" type="Node2D" parent="."]

[node name="FollowCamera" type="Camera2D" parent="CameraPivot"]
anchor_mode = 0

[node name="Line2D" type="Line2D" parent="."]
points = PackedVector2Array(488.375, 570, 1846.63, 570, 2238.82, 675, 83.375, 675, 488.375, 570)

[node name="Gramophone" parent="." instance=ExtResource("5_lquwl")]
position = Vector2(488, 628)
